fixed odd alignment

--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -37,6 +37,7 @@
     height: 100%;
     padding-inline: 0.5rem;
     overflow-y: scroll;
+    align-self: flex-end;
 }
 .stackCardText > h1 {
     margin-top: 0;
